--- a/Overlay.css
+++ b/Overlay.css
@@ -3,6 +3,7 @@
     position: absolute;
     top:50%;
     left:50%;
+    z-index:10;
     
 transform: translate(-50%, -50%);
     background-color: aliceblue;
@@ -10,7 +11,11 @@ transform: translate(-50%, -50%);
     box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
 }
 .feedback{
- visibility:hidden; 
+ display: none; 
+}
+.show{
+    display:block;
+    
 }
 .open{
     visibility:visible;
