--- a/view.css
+++ b/view.css
@@ -1,6 +1,6 @@
 body
 {
-	background:#67727B;
+	background:#eee;
 	font-family:"Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
 	font-size:small;
 	margin:8px 0 16px;
@@ -14,6 +14,7 @@ body
 	margin:0 auto;
 	text-align:left;
 	width:640px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.8);
 }
 
 #top
